# CS421_Crypto_Arbitrage_Detector

./: .gitignore  README.md
create_dataset/: decompress_snapshot.py  get_historical_price.py  process_raw_json.py  symbol_to_exchange.py
haskell_env/cross-exch-arbitrage-simulator/: CHANGELOG.md  README.md  cross-exch-arbitrage-simulator.cabal  stack.yaml
haskell_env/cross-exch-arbitrage-simulator/.stack-work/: stack.sqlite3
haskell_env/cross-exch-arbitrage-simulator/src/: Main.hs
haskell_env/cross-exch-arbitrage-simulator/src/Coordinator/: Coordinator.hs
haskell_env/cross-exch-arbitrage-simulator/src/Data_parse/: Data_parser.hs  Snapshot.hs
haskell_env/cross-exch-arbitrage-simulator/src/Directory_scan/: Get_snapshots.hs
haskell_env/cross-exch-arbitrage-simulator/src/Hello/: HelloWorld.hs
haskell_env/cross-exch-arbitrage-simulator/src/Portfolio/: Portfolio.hs
haskell_env/cross-exch-arbitrage-simulator/src/ProcessBatch/: ProcessBatch.hs
haskell_env/cross-exch-arbitrage-simulator/src/QueueConsumer/: Consumer.hs
haskell_env/cross-exch-arbitrage-simulator/test/: Spec.hs  Tests.hs
metadata/: symbol_to_exchange.json
metadata/crypto_snapshot_data/2025-04-22/: BTCTurk.ndjson.zst  BigONE.ndjson.zst  Binance.ndjson.zst  BitMax.ndjson.zst  Bitexen.ndjson.zst  Bitfinex.ndjson.zst  Bithumb.ndjson.zst  Bitrue.ndjson.zst  CoinbasePro.ndjson.zst  Coinone.ndjson.zst  Ethfinex.ndjson.zst  Gateio.ndjson.zst  HitBTC.ndjson.zst  Huobi.ndjson.zst  Kraken.ndjson.zst  KuCoin.ndjson.zst  MercadoBitcoin.ndjson.zst  NovaDAX.ndjson.zst  OKEx.ndjson.zst  Paribu.ndjson.zst  Poloniex.ndjson.zst  Upbit.ndjson.zst
metadata/crypto_timeseries_data/ACA_USD/: ACA_USD_Binance.json  ACA_USD_Gate.io.json  ACA_USD_KuCoin.json
metadata/crypto_timeseries_data/ACH_USD/: ACH_USD_Coinbase Pro.json  ACH_USD_Gate.io.json  ACH_USD_Huobi.json
metadata/crypto_timeseries_data/ADA_BRL/: ADA_BRL_Binance.json  ADA_BRL_MercadoBitcoin.json  ADA_BRL_NovaDAX.json
(+624 files in other folders)
